[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar_toolkit"
version = "0.1.0"
authors = [{name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn"}]
description = "LiDAR signal processing toolkit: calibration, signal modeling, and estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy >= 1.20.0",
]

[project.optional-dependencies]
test = [
    "mujoco >= 3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lidar_toolkit = ["scan_mode/*.npy"]

[project.urls]
Homepage = "https://github.com/TATP-233/lidar-toolkit"
Repository = "https://github.com/TATP-233/lidar-toolkit"
